--- a/public/index.html
+++ b/public/index.html
@@ -1,2 +1,24 @@
 <!DOCTYPE html>
-<iframe src="main.html" width="655" height="480"></iframe>
+<body style="
+    margin: 0;
+    padding: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
+">
+<script src="wasm_exec.js"></script>
+<script>
+    // Polyfill
+    if (!WebAssembly.instantiateStreaming) {
+        WebAssembly.instantiateStreaming = async (resp, importObject) => {
+            const source = await (await resp).arrayBuffer();
+            return await WebAssembly.instantiate(source, importObject);
+        };
+    }
+
+    const go = new Go();
+    WebAssembly.instantiateStreaming(fetch("pong.wasm"), go.importObject).then(result => {
+        go.run(result.instance);
+    });
+</script>
+</body>
